<resources>
    <string name="app_name">Sofia2 IoT</string>
    <string name="configuration_settings">Settings</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported on this device</string>
    <string name="gps_location_not_enabled">Please activate location settings on this device</string>
    <string name="location_updated">Location updated</string>
    <string name="play_menu">Play</string>
    <string name="stop_menu">Stop</string>

    <!-- Main activity strings -->
    <string name="service_status_text">Tracking service status: </string>
    <string name="frames_gen_text">Generated frames: </string>
    <string name="frames_sent_text">Sent frames: </string>
    <string name="latitude_text">Latitude: </string>
    <string name="longitude_text">Longitude: </string>
    <string name="accuracy_text">Location accuracy (m): </string>
    <string name="temperature_text">Temperature (ºC):</string>
    <string name="luxometer_text">Obj Temperature (ºC): </string>
    <string name="accZ_text">Acc Z Axis (G):</string>
    <string name="accY_text">Acc Y Axis (G):</string>
    <string name="accX_text">Acc X Axis (G):</string>

    <!-- Preferences keys -->
    <string name="pref_sensor_id">pref_sensor_id</string>
    <string name="pref_email">pref_email</string>
    <string name="pref_ontology">pref_ontology</string>
    <string name="pref_url">pref_url</string>
    <string name="pref_thinkp">pref_thinkp</string>
    <string name="pref_token">pref_thinkp</string>



    <!-- Preferences strings -->
    <string name="pref_email_name">Your e-mail address</string>
    <string name="pref_ontology_name">Ontology name</string>
    <string name="pref_url_name">Sofia2 instance URL</string>
    <string name="pref_thinkp_name">ThinKP name</string>
    <string name="pref_token_name">pref_thinkp</string>

    <string name="pref_email_summary">E-mail to be notified</string>
    <string name="pref_ontology_summary">Ontology used</string>
    <string name="pref_url_summary">URL used</string>
    <string name="pref_thinkp_summary">ThinKP used</string>
    <string name="pref_token_summary">pref_thinkp</string>

    <string name="pref_loc_acc_name">Location accuracy</string>
    <string name="pref_loc_acc_summary">Radius of maximum tolerated deviation (m)</string>
    <string name="pref_sensor_name">Sensor selection</string>
    <string name="pref_sensor_summary">Identify the related sensor</string>
    <string name="pref_temp_min_name">Scanning period</string>
    <string name="pref_temp_min_summary">BLE scanning period (ms)</string>
    <string name="pref_temp_max_name">No-scanning period</string>
    <string name="pref_temp_max_summary">BLE no-scanning period</string>
    <string name="pref_plate_name">Truck plate</string>
    <string name="pref_plate_summary">Plate identification number for this truck</string>
    <string name="pref_mqtt_port_name">MQTT Sofia2 port</string>
    <string name="pref_mqtt_port_summary">Toggle MQTT port to connect to Sofia2</string>

    <string name="app_pref_cat">Application settings </string>

    <!-- Closing dialog -->
    <string name="dialog_title">Leaving app</string>
    <string name="dialog_message">Please go back and push STOP to stop background operation</string>


</resources>
