<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.minsait.sofia2.sofia2iot.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/frames_gen_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frames_gen_text" />
        <TextView
            android:id="@+id/frames_gen_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/latitude_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_text" />
        <TextView
            android:id="@+id/latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/longitude_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude_text" />
        <TextView
            android:id="@+id/longitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/accuracy_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_text" />
        <TextView
            android:id="@+id/accuracy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/accX_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accX_text" />
        <TextView
            android:id="@+id/accX_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/accY_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accY_text" />
        <TextView
            android:id="@+id/accY_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/accZ_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accZ_text" />
        <TextView
            android:id="@+id/accZ_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beacon_view"
        android:src="@drawable/icon_bluetooth"
        android:layout_gravity="center"
        android:paddingTop="40dp"
        android:visibility="invisible"
        />


</LinearLayout>
